--- a/_posts/2020-05-15-test.markdown
+++ b/_posts/2020-05-15-test.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Welcome to Jekyll!"
+title:  "Test post"
 date:   2020-05-15 18:54:15 +1000
 categories: jekyll update
 ---
