--- a/_posts/2020-05-15-test copy 2.markdown
+++ b/_posts/2020-05-15-test copy 2.markdown
@@ -1,15 +1,15 @@
 ---
 layout: post
-title:  "These are some random words"
+title:  "What's in the future for CRO"
 date:   2020-05-15 18:54:15 +1000
 categories: jekyll update
 ---
 
 Occaecat nulla exercitation anim sint fugiat ex dolor in tempor aliqua ut. Ipsum ex voluptate velit aliqua amet. Eu occaecat dolore pariatur veniam laboris nisi tempor laborum esse consequat magna et laborum. Quis aliqua mollit officia minim magna laboris cillum irure ea sunt occaecat. Officia irure exercitation est aliqua ad sint aliqua culpa consectetur cupidatat. Lorem do do sint do aliqua incididunt. Occaecat non deserunt culpa aliquip.
 
-Tempor velit irure ullamco eiusmod excepteur cupidatat fugiat. Laboris deserunt cillum amet irure tempor pariatur in tempor. Labore ex do esse in exercitation officia nostrud ad voluptate nulla.
-
 <!--more-->
+
+Tempor velit irure ullamco eiusmod excepteur cupidatat fugiat. Laboris deserunt cillum amet irure tempor pariatur in tempor. Labore ex do esse in exercitation officia nostrud ad voluptate nulla.
 
 Labore sint aliquip aliquip et deserunt irure anim ex fugiat consectetur mollit. Veniam anim qui cupidatat incididunt velit aute consectetur ipsum adipisicing adipisicing adipisicing laborum velit. Labore proident irure nisi reprehenderit dolore tempor commodo ut consequat magna magna proident anim cillum. Cillum irure amet cupidatat nostrud occaecat velit amet enim aliqua adipisicing. Velit esse irure duis pariatur magna ullamco pariatur. Veniam non anim tempor laboris ad.
 
