--- a/_posts/2020-05-15-test copy 3.markdown
+++ b/_posts/2020-05-15-test copy 3.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "These are some random words"
+title:  "How I made this blog"
 date:   2020-05-15 18:54:15 +1000
 categories: jekyll update
 ---
