more cosmetic changes

--- a/_posts/2020-05-15-test copy 2.markdown
+++ b/_posts/2020-05-15-test copy 2.markdown
@@ -8,6 +8,7 @@ categories: jekyll update
 Occaecat nulla exercitation anim sint fugiat ex dolor in tempor aliqua ut. Ipsum ex voluptate velit aliqua amet. Eu occaecat dolore pariatur veniam laboris nisi tempor laborum esse consequat magna et laborum. Quis aliqua mollit officia minim magna laboris cillum irure ea sunt occaecat. Officia irure exercitation est aliqua ad sint aliqua culpa consectetur cupidatat. Lorem do do sint do aliqua incididunt. Occaecat non deserunt culpa aliquip.
 
 <!--more-->
+<a name="more"></a>
 
 Tempor velit irure ullamco eiusmod excepteur cupidatat fugiat. Laboris deserunt cillum amet irure tempor pariatur in tempor. Labore ex do esse in exercitation officia nostrud ad voluptate nulla.
 
