added days since post

--- a/_posts/2020-05-15-test copy 3.markdown
+++ b/_posts/2020-05-15-test copy 3.markdown
@@ -7,15 +7,4 @@ categories: jekyll update
 
 Occaecat nulla exercitation anim sint fugiat ex dolor in tempor aliqua ut. Ipsum ex voluptate velit aliqua amet. Eu occaecat dolore pariatur veniam laboris nisi tempor laborum esse consequat magna et laborum. Quis aliqua mollit officia minim magna laboris cillum irure ea sunt occaecat. Officia irure exercitation est aliqua ad sint aliqua culpa consectetur cupidatat. Lorem do do sint do aliqua incididunt. Occaecat non deserunt culpa aliquip.
 
-Tempor velit irure ullamco eiusmod excepteur cupidatat fugiat. Laboris deserunt cillum amet irure tempor pariatur in tempor. Labore ex do esse in exercitation officia nostrud ad voluptate nulla.
-
-<!--more-->
-<a name="more"></a>
-
-Labore sint aliquip aliquip et deserunt irure anim ex fugiat consectetur mollit. Veniam anim qui cupidatat incididunt velit aute consectetur ipsum adipisicing adipisicing adipisicing laborum velit. Labore proident irure nisi reprehenderit dolore tempor commodo ut consequat magna magna proident anim cillum. Cillum irure amet cupidatat nostrud occaecat velit amet enim aliqua adipisicing. Velit esse irure duis pariatur magna ullamco pariatur. Veniam non anim tempor laboris ad.
-
-Aliqua ullamco minim laboris id non pariatur sit et minim aliqua. Quis tempor nisi ad consectetur qui sit labore aliquip ea. Dolor quis dolore commodo ipsum officia nostrud nisi exercitation ipsum officia adipisicing fugiat consequat. Aliquip ea aliquip dolor qui. Duis commodo enim labore proident laborum deserunt do et. Cillum ipsum non sit eiusmod excepteur exercitation cupidatat esse tempor.
-
-Aute dolore elit pariatur occaecat cupidatat Lorem sit laborum est. Enim do excepteur nulla et. Minim do sint laborum consequat nisi voluptate aliqua. Cillum incididunt fugiat cupidatat nulla ad amet irure. Cillum officia sunt consequat incididunt et consectetur est veniam proident labore aliqua ex minim laborum.
-
-Excepteur ut minim aliquip esse deserunt irure culpa esse excepteur aliquip veniam. Sit veniam cillum ad nulla irure in eu eu. Ex labore duis laborum dolor do dolor nulla sunt ex aliquip. Consequat laborum laboris dolore ipsum qui aute nisi. Cillum reprehenderit eu ullamco fugiat sunt exercitation et nulla irure ex ea. Aute et ex fugiat nisi veniam exercitation est irure aliqua adipisicing ipsum. Sint enim culpa adipisicing officia quis incididunt sint est quis culpa do.
+This is a very short post.
